--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <head>
     </head>
     <body><h1>Projeto do Renato ASA</h1>
+    <p>Página pessoal</p>
+        <footer>&copy: Renato ASA</footer>
     </body>
 </html>
