texto e mais texto

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <body><h1>Projeto do Renato ASA</h1>
     <p>Página pessoal</p>
         <footer>&copy: Renato ASA</footer>
+        <main>
+              <h2> Texto e mais texto</h2>
+        </main>
     </body>
 </html>
